--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -11,8 +11,8 @@
 /* Variables */
 :root {
     --avatar-size: 32px;
-    --background-image: url('https://i.imgur.com/7SbtKvw.png');
-    --home-image: url('https://cdn.discordapp.com/attachments/1000425745052614787/1067364648183148584/8Oz7jgN.gif');
+    --background-image: url('https://cdn.discordapp.com/attachments/1000425745052614787/1067364648183148584/8Oz7jgN.gif');
+    --home-image: url('https://imgur.com/a/yMFELTS');
     --background-solid: #161921;
     --background-solid-dark: #101218;
     --background-solid-darker: #0c0e12;
